crates/oxc_css/tests/error/scss/at-rule/function/unterminated.snap
---
source: crates/oxc_css/tests/error.rs
---
error: expect token `$var`, but found `{`
  ┌─ unterminated.scss:1:38
  │
1 │ @function missing-paren-error($a,$b, {
  │                                      ^


